Intl.DateTimeFormat should obey 2-digit hour https://bugs.webkit.org/show_bug.cgi?id=195974

Reviewed by Keith Miller.

Source/JavaScriptCore:

* runtime/IntlDateTimeFormat.cpp:
(JSC::IntlDateTimeFormat::initializeDateTimeFormat):

LayoutTests:

* js/intl-datetimeformat-expected.txt:
* js/script-tests/intl-datetimeformat.js:


Canonical link: https://commits.webkit.org/210567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243512 268f45cc-cd09-0410-ab3c-d52691b4dbfc